# tinker-hp

./: README.md  Tinkerperf.f  Tinkerperf.s  Tinkerperf.tex  Tinkerperf.txt  lipsum.dtx
GPU/: Deep-HP.md  Prerequisites.md  Quantum-HP_tutorial.md  README.md  build.md  kgeom.f  tinkerml.tensorflow.yaml  tinkerml.torch.yaml  tinkerml.yaml
GPU/2decomp_fft/: Makefile  makel2decomp_SPrec.sh
GPU/benchs/: bench.sh  scripts.sh
GPU/ci/: clean.sh  install.sh  utils.sh
GPU/colvars/: Makefile  Makefile.am  Makefile.in  colvar.cpp  colvarbias.cpp  colvarcomp_alchlambda.cpp  colvarmodule.cpp  colvarscript.cpp  colvarvalue.cpp  colvarvalue.h
GPU/examples/: Deep-HP_example1.key  Deep-HP_example2.key  Deep-HP_example3.key  Deep-HP_example4.key  Deep-HP_example4.xyz  Deep-HP_example5.key  Deep-HP_example5.xyz  cox.key  dhfr2.key  nacl_amber.key  nacl_amber.xyz
GPU/ml_models/: mlmbd_model.pt
GPU/params/: Makefile  Makefile.in  openeye.prm  sibfawater.prm
GPU/plumed2/: Makefile  Makefile.conf.nvhpc  config.status  configure  install.mk  sourceme.sh
GPU/source/: MOD_USampling.f  MOD_action.f  MOD_analyz.f  MOD_angang.f  MOD_angle.f  MOD_angpot.f  MOD_angtor.f  MOD_ani.f  MOD_argue.f  MOD_ascii.f  MOD_atmlst.f  MOD_atmtyp.f  MOD_atoms.f  MOD_bath.f  MOD_beads.f  MOD_bitor.f  MOD_bndpot.f  MOD_bond.f  MOD_bound.f  MOD_boxes.f  MOD_cell.f  MOD_cflux.f  MOD_charge.f  MOD_chgpen.f  MOD_chgpot.f  MOD_chgtrn.f  MOD_chunks.f  MOD_colvars.f  MOD_commstuffpi.f  MOD_couple.f  MOD_ctrpot.f  MOD_cutoff.f  MOD_dcdio.f  MOD_deconvolution.f90  MOD_deriv.f  MOD_disp.f  MOD_divcon.f  MOD_domdec.f  MOD_dsppot.f  MOD_energi.f  (+520 more)
GPU/wrappers/: Makefile  csort.cu  thrust_cache.cu  thrust_cache.h  thrust_module.f90
LiveCOMS/: README.md  Tinkerperf.bib  Tinkerperf.optrpt  Tinkerperf.tex  lipsum.ins  livecoms.cls  vancouver-livecoms.bst  vancouver-livecoms2.bst
examples/: pond.run
sibfa/source/: adqtb.f  (+164 more)
source/: Makefile.gfortran  align.i  analyze.f  argue.i  atmlst.i  bitor.i  bond.i  bonds.f  border.i  bound.i  boxes.i  chrono.i  command.f  commstuff.f  control.f  couple.i  cutoffs.f  drivermpi.f  dynamic.f  eangang.f  eangang3.f  eangle1.f  egeom.f  egeom3.f  ehal3.f  eimptor.f  eimptor3.f  elj3.f  empole.f  empole1pme.f  empole3.f  epitors3.f  erf.f  estrbnd.f  estrbnd1.f  estrtor3.f  etortor1.f  etortor3.f  eurey.f  evcorr.f  (+85 more)
v1.0/: README.md
v1.1/: README.md
v1.1v/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  description
v1.1v/2decomp_fft/doc/: DOC_2DECOMP_FFT.html
v1.1v/2decomp_fft/src/: Makefile  Makefile.in  decomp_2d.f90  depend.mk  fft_fftw3.f90  fft_generic.f90  io.f90
v1.1v/autom4te.cache/: output.0  requests  traces.0
v1.1v/example/: Makefile  Makefile.am  Makefile.in
v1.1v/example/cox/: Makefile  Makefile.in  cox.key  cox.run  cox_charmm.key  cox_charmm.run  out  outana  outanaOK  outcox
v1.1v/example/dhfr/: Makefile  Makefile.in  dhfr.run  dhfr2.key  out
v1.1v/example/pond/: Makefile  Makefile.in  pond.key  pond.run  pond_charmm.key  pond_charmm.run
v1.1v/example/stmv/: Makefile  Makefile.in
v1.1v/example/ubiquitin2/: Makefile  Makefile.am  Makefile.in  ubiquitin2.key  ubiquitin2.run
v1.1v/params/: Makefile  amoebabio09.prm  sibfa1.prm
v1.1v/source/: MOD_analyz.f  MOD_angle.f  MOD_angpot.f  MOD_atmlst.f  MOD_atmtyp.f  MOD_atoms.f  MOD_boxes.f  MOD_cell.f  MOD_charge.f  MOD_couple.f  MOD_cutoff.f  MOD_deriv.f  MOD_divcon.f  MOD_domdec.f  MOD_energi.f  MOD_ewald.f  MOD_fft.f  MOD_files.f  MOD_freeze.f  MOD_group.f  MOD_kanang.f  MOD_katoms.f  MOD_keys.f  MOD_kmulti.f  MOD_kopbnd.f  MOD_ktrtor.f  MOD_langevin.f  MOD_linmin.f  MOD_math.f  MOD_mpole.f  MOD_neigh.f  MOD_opbend.f  MOD_pme.f  MOD_polar.f  MOD_polgrp.f  MOD_scales.f  MOD_sizes.f  MOD_timestat.f  MOD_tors.f  MOD_units.f  (+86 more)
v1.1v/tutorials/: Makefile  Makefile.am  Makefile.in
v1.2/: Makefile.am  README.md  Readme_v1.2.tex  Release_Notes_v1.2.tex  configure.ac
v1.2/2decomp_fft/src/: Makefile.am  depend.mk  fft_fftw3_f03.f90  fft_mkl.f90
v1.2/colvars/: Makefile  Makefile.am  colvar.cpp  colvarbias_abf.cpp  colvarbias_abf.h  colvarcomp_alchlambda.cpp  colvarcomp_combination.cpp  colvarmodule_refs.h  colvarvalue.cpp  colvarvalue.h
v1.2/example/: Makefile.am  dhfr2tcg.key  dhfr2tcg.run  nacl_amber.colvars  nacl_amber.key  puddle.run  ubiquitin2.debug.run  ubiquitin2.dyn  ubiquitin2.key  ubiquitin2.run  ubiquitin2respa1.key  ubiquitin2respa1.run  ubiquitin2respa1tcg.key  ubiquitin2respa1tcg.run  ubiquitin2tcg.key  ubiquitin2tcg.run
v1.2/example/NQE/liquid_water/: compute_rdf.py
v1.2/example/NQE/liquid_water/QTB/: QTB_spectra_O_1.out.ref  waterhuge.key
v1.2/example/NQE/liquid_water/RPMD/: gr_classical.ref
v1.2/example/NQE/liquid_water/adQTB/: gamma_restart.out.ref  gr_adQTB.ref  qspcf.prm  waterhuge.key  watersmall.key
v1.2/example/NQE/solvated_benzene/RPMD/: benzenebox.key  benzenebox.xyz  qamoeba09.prm
v1.2/example/NQE/solvated_benzene/adQTB/: benzenebox.key  gamma_restart.out.RATIO
v1.2/params/: Makefile.am  qwater22-PI.prm  qwater22-QTB.prm
v1.2/plumed2/: MakeInstall.mk  Makefile  configure  configure.ac
v1.2/scripts/: Makefile.am  tinkerhp.in
v1.2/source/: MOD_action.f  MOD_analyz.f  MOD_angang.f  MOD_angle.f  MOD_angpot.f  MOD_angtor.f  MOD_argue.f  MOD_ascii.f  MOD_atmlst.f  MOD_atmtyp.f  MOD_atoms.f  MOD_bath.f  MOD_beads.f  MOD_bitor.f  MOD_bndpot.f  MOD_bond.f  MOD_bound.f  MOD_boxes.f  MOD_cflux.f  MOD_charge.f  MOD_chgpen.f  MOD_chgtrn.f  MOD_chunks.f  MOD_colvars.f  MOD_commstuffpi.f  MOD_couple.f  MOD_ctrpot.f  MOD_cutoff.f  MOD_dcdmod.f  MOD_deconvolution.f90  MOD_deriv.f  MOD_disp.f  MOD_domdec.f  MOD_dsppot.f  MOD_energi.f  MOD_ewald.f  MOD_files.f  MOD_group.f  MOD_improp.f  MOD_imptor.f  (+286 more)
v1.2/tcl8.6.13/unix/: tclUuid.h
v1.2/tutorials/: Makefile.am  Quantum-HP_tutorial.md  lambda-ABF.md
v1.2/tutorials/SMD/: Makefile.am
v1.2/tutorials/SMD/CFSMD/: distance_vs_time.gnu  sub_tinker  system.key
v1.2/tutorials/SMD/CVSMD/: charmm22cmap.prm  distance_vs_time.gnu  force_vs_time.gnu  system.key  system.xyz  work.gnu  work.tcl
(+462 files in other folders)
