#
#     Sorbonne University
#     Washington University in Saint Louis
#     University of Texas at Austin
#

#
# Declare the subdirectories we'll work on
#
SUBDIRS= 2decomp_fft/src source tutorials example params
DIST_SUBDIRS= 2decomp_fft/src source tutorials example params

EXTRA_DIST =

#
# Main directory
#

EXTRA_DIST += Readme_v1.1v.pdf
EXTRA_DIST += Release_Notes_v1.1v.pdf

#
# 2decomp_fft/src/ directory
# 
# Must include all the interfaces for fftw3  here, because dependency is resolved
# for only one of them at a time
#
 
EXTRA_DIST += 2decomp_fft/src/depend.mk
EXTRA_DIST += 2decomp_fft/src/fft_fftw3.f90
EXTRA_DIST += 2decomp_fft/src/fft_fftw3_f03.f90
EXTRA_DIST += 2decomp_fft/src/fft_generic.f90
EXTRA_DIST += 2decomp_fft/src/fft_mkl.f90

#
# example directory
#

EXTRA_DIST += example/ubiquitin2
EXTRA_DIST += example/ubiquitin2/ubiquitin2.dyn
EXTRA_DIST += example/ubiquitin2/ubiquitin2.key
EXTRA_DIST += example/ubiquitin2/ubiquitin2.log
EXTRA_DIST += example/ubiquitin2/ubiquitin2.run
EXTRA_DIST += example/ubiquitin2/ubiquitin2.xyz
EXTRA_DIST += example/ubiquitin2/ubiquitin2vec.log
EXTRA_DIST += example/cox
EXTRA_DIST += example/cox/cox.dyn
EXTRA_DIST += example/cox/cox.key
EXTRA_DIST += example/cox/cox.log
EXTRA_DIST += example/cox/cox.run
EXTRA_DIST += example/cox/cox.xyz
EXTRA_DIST += example/cox/cox_charmm.dyn
EXTRA_DIST += example/cox/cox_charmm.key
EXTRA_DIST += example/cox/cox_charmm.log
EXTRA_DIST += example/cox/cox_charmm.run
EXTRA_DIST += example/cox/cox_charmm.xyz
EXTRA_DIST += example/cox/cox_charmmvec.log
EXTRA_DIST += example/cox/coxvec.log
EXTRA_DIST += example/dhfr
EXTRA_DIST += example/dhfr/dhfr.log
EXTRA_DIST += example/dhfr/dhfr.run
EXTRA_DIST += example/dhfr/dhfr2.dyn
EXTRA_DIST += example/dhfr/dhfr2.key
EXTRA_DIST += example/dhfr/dhfr2.xyz
EXTRA_DIST += example/dhfr/dhfrvec.log


#
# params directory
#

EXTRA_DIST += params/0README
EXTRA_DIST += params/amber94.prm
EXTRA_DIST += params/amber96.prm
EXTRA_DIST += params/amber98.prm
EXTRA_DIST += params/amber99.prm
EXTRA_DIST += params/amber99sb.prm
EXTRA_DIST += params/amoeba04.prm
EXTRA_DIST += params/amoeba09.prm
EXTRA_DIST += params/amoebabio09.prm
EXTRA_DIST += params/amoebabio18.prm
EXTRA_DIST += params/amoebapro04.prm
EXTRA_DIST += params/amoebapro13.prm
EXTRA_DIST += params/charmm19.prm
EXTRA_DIST += params/charmm22.prm
EXTRA_DIST += params/charmm22cmap.prm
EXTRA_DIST += params/dang.prm
EXTRA_DIST += params/hoch.prm
EXTRA_DIST += params/iwater.prm
EXTRA_DIST += params/mm2.prm
EXTRA_DIST += params/mm3.prm
EXTRA_DIST += params/mm3pro.prm
EXTRA_DIST += params/mmff.prm
EXTRA_DIST += params/oplsaa.prm
EXTRA_DIST += params/oplsaal.prm
EXTRA_DIST += params/oplsua.prm
EXTRA_DIST += params/sibfa1.prm
EXTRA_DIST += params/sibfawater.prm
EXTRA_DIST += params/smoothaa.prm
EXTRA_DIST += params/smoothua.prm
EXTRA_DIST += params/tiny.prm
EXTRA_DIST += params/water.prm

 
#
# source directory
#

EXTRA_DIST += source/Tinker_deps.py
 
#
# Tutorials directory
#
 
EXTRA_DIST += tutorials/Tinker_preparation_tutorial.pdf
