#
#     Sorbonne University
#     Washington University in Saint Louis
#     University of Texas at Austin
#

#
# Declare the subdirectories we'll work on
#
SUBDIRS= 2decomp_fft/src source tutorials example params plumed2 scripts colvars tcl8.6.13/unix
DIST_SUBDIRS= 2decomp_fft/src source tutorials example params plumed2 colvars tcl8.6.13/unix

EXTRA_DIST =

#
# Main directory
#

EXTRA_DIST += Readme_v1.2.pdf
EXTRA_DIST += Release_Notes_v1.2.pdf

#
# 2decomp_fft/src/ directory
# 
# Must include all the interfaces for fftw3  here, because dependency is resolved
# for only one of them at a time
#
 
EXTRA_DIST += 2decomp_fft/src/depend.mk
EXTRA_DIST += 2decomp_fft/src/fft_fftw3.f90
EXTRA_DIST += 2decomp_fft/src/fft_fftw3_f03.f90
EXTRA_DIST += 2decomp_fft/src/fft_generic.f90
EXTRA_DIST += 2decomp_fft/src/fft_mkl.f90

#
# example directory
#

EXTRA_DIST += example/dhfr.log
EXTRA_DIST += example/dhfr.run
EXTRA_DIST += example/dhfr2tcg.run
EXTRA_DIST += example/dhfr2tcg.key
EXTRA_DIST += example/dhfr2.dyn
EXTRA_DIST += example/dhfr2.key
EXTRA_DIST += example/dhfr2.xyz
EXTRA_DIST += example/pond.dyn.gz
EXTRA_DIST += example/pond.key
EXTRA_DIST += example/pond.log
EXTRA_DIST += example/pond.run
EXTRA_DIST += example/pond.xyz
EXTRA_DIST += example/puddle.dyn
EXTRA_DIST += example/puddle.key
EXTRA_DIST += example/puddle.log
EXTRA_DIST += example/puddle.run
EXTRA_DIST += example/puddle.xyz
EXTRA_DIST += example/ubiquitin2.debug.run
EXTRA_DIST += example/ubiquitin2.dyn
EXTRA_DIST += example/ubiquitin2.key
EXTRA_DIST += example/ubiquitin2.log
EXTRA_DIST += example/ubiquitin2.run
EXTRA_DIST += example/ubiquitin2.xyz
EXTRA_DIST += example/ubiquitin2respa1.key
EXTRA_DIST += example/ubiquitin2respa1.log
EXTRA_DIST += example/ubiquitin2respa1.run
EXTRA_DIST += example/ubiquitin2respa1tcg.key
EXTRA_DIST += example/ubiquitin2respa1tcg.log
EXTRA_DIST += example/ubiquitin2respa1tcg.run
EXTRA_DIST += example/ubiquitin2tcg.key
EXTRA_DIST += example/ubiquitin2tcg.log
EXTRA_DIST += example/ubiquitin2tcg.run

#
# params directory
#

EXTRA_DIST += params/0README
EXTRA_DIST += params/amber94.prm
EXTRA_DIST += params/amber96.prm
EXTRA_DIST += params/amber98.prm
EXTRA_DIST += params/amber99.prm
EXTRA_DIST += params/amber99sb.prm
EXTRA_DIST += params/amoeba04.prm
EXTRA_DIST += params/amoeba09.prm
EXTRA_DIST += params/amoebabio09.prm
EXTRA_DIST += params/amoebapro04.prm
EXTRA_DIST += params/amoebapro13.prm
EXTRA_DIST += params/charmm19.prm
EXTRA_DIST += params/charmm22.prm
EXTRA_DIST += params/charmm22cmap.prm
EXTRA_DIST += params/dang.prm
EXTRA_DIST += params/hoch.prm
EXTRA_DIST += params/iwater.prm
EXTRA_DIST += params/mm2.prm
EXTRA_DIST += params/mm3.prm
EXTRA_DIST += params/mm3pro.prm
EXTRA_DIST += params/mmff.prm
EXTRA_DIST += params/oplsaa.prm
EXTRA_DIST += params/oplsaal.prm
EXTRA_DIST += params/oplsua.prm
EXTRA_DIST += params/smoothaa.prm
EXTRA_DIST += params/smoothua.prm
EXTRA_DIST += params/tiny.prm
EXTRA_DIST += params/water.prm
EXTRA_DIST += params/water03.prm
EXTRA_DIST += params/water14.prm
 
#
# source directory
#

EXTRA_DIST += source/Tinker_deps.py
 
#
# Tutorials directory
#
 
EXTRA_DIST += tutorials/SMD/CFSMD/SMD_output.dat
EXTRA_DIST += tutorials/SMD/CFSMD/Time_distance.png
EXTRA_DIST += tutorials/SMD/CFSMD/charmm22cmap.prm
EXTRA_DIST += tutorials/SMD/CFSMD/distance_vs_time.gnu
EXTRA_DIST += tutorials/SMD/CFSMD/sub_tinker
EXTRA_DIST += tutorials/SMD/CFSMD/system.dyn
EXTRA_DIST += tutorials/SMD/CFSMD/system.key
EXTRA_DIST += tutorials/SMD/CFSMD/system.out
EXTRA_DIST += tutorials/SMD/CFSMD/system.xyz
EXTRA_DIST += tutorials/SMD/CVSMD/Force_time.png
EXTRA_DIST += tutorials/SMD/CVSMD/SMD_output.dat
EXTRA_DIST += tutorials/SMD/CVSMD/SMD_output1.dat
EXTRA_DIST += tutorials/SMD/CVSMD/Time_distance.png
EXTRA_DIST += tutorials/SMD/CVSMD/charmm22cmap.prm
EXTRA_DIST += tutorials/SMD/CVSMD/distance_vs_time.gnu
EXTRA_DIST += tutorials/SMD/CVSMD/force_vs_time.gnu
EXTRA_DIST += tutorials/SMD/CVSMD/sub_tinker
EXTRA_DIST += tutorials/SMD/CVSMD/system.dyn
EXTRA_DIST += tutorials/SMD/CVSMD/system.key
EXTRA_DIST += tutorials/SMD/CVSMD/system.out
EXTRA_DIST += tutorials/SMD/CVSMD/system.xyz
EXTRA_DIST += tutorials/SMD/CVSMD/work.dat
EXTRA_DIST += tutorials/SMD/CVSMD/work.gnu
EXTRA_DIST += tutorials/SMD/CVSMD/work.png
EXTRA_DIST += tutorials/SMD/CVSMD/work.tcl
EXTRA_DIST += tutorials/SMD/SMD_manual.pdf
EXTRA_DIST += tutorials/Tinker_preparation_tutorial.pdf
EXTRA_DIST += tutorials/Umbrella_sampling_tutorial.pdf
