#
#     Sorbonne University
#     Washington University in Saint Louis
#     University of Texas at Austin
#

####################################################
# Compilation of colvars library for Tinker-HP     #
#                                                  #
# Declare the library to create                    #
####################################################

noinst_LIBRARIES = libcolvars.a

#
# Declare her sources
#

libcolvars_a_SOURCES =
libcolvars_a_SOURCES += colvar.cpp
libcolvars_a_SOURCES += colvar_neuralnetworkcompute.cpp
libcolvars_a_SOURCES += colvaratoms.cpp
libcolvars_a_SOURCES += colvarbias.cpp
libcolvars_a_SOURCES += colvarbias_abf.cpp
libcolvars_a_SOURCES += colvarbias_alb.cpp
libcolvars_a_SOURCES += colvarbias_histogram.cpp
libcolvars_a_SOURCES += colvarbias_histogram_reweight_amd.cpp
libcolvars_a_SOURCES += colvarbias_meta.cpp
libcolvars_a_SOURCES += colvarbias_restraint.cpp
libcolvars_a_SOURCES += colvarcomp.cpp
libcolvars_a_SOURCES += colvarcomp_alchlambda.cpp
libcolvars_a_SOURCES += colvarcomp_angles.cpp
libcolvars_a_SOURCES += colvarcomp_apath.cpp
libcolvars_a_SOURCES += colvarcomp_combination.cpp
libcolvars_a_SOURCES += colvarcomp_coordnums.cpp
libcolvars_a_SOURCES += colvarcomp_distances.cpp
libcolvars_a_SOURCES += colvarcomp_gpath.cpp
libcolvars_a_SOURCES += colvarcomp_neuralnetwork.cpp
libcolvars_a_SOURCES += colvarcomp_protein.cpp
libcolvars_a_SOURCES += colvarcomp_rotations.cpp
libcolvars_a_SOURCES += colvarcomp_volmaps.cpp
libcolvars_a_SOURCES += colvardeps.cpp
libcolvars_a_SOURCES += colvargrid.cpp
libcolvars_a_SOURCES += colvarmodule.cpp
libcolvars_a_SOURCES += colvarparams.cpp
libcolvars_a_SOURCES += colvarparse.cpp
libcolvars_a_SOURCES += colvarproxy.cpp
libcolvars_a_SOURCES += colvarproxy_replicas.cpp
libcolvars_a_SOURCES += colvarproxy_tcl.cpp
libcolvars_a_SOURCES += colvarproxy_volmaps.cpp
libcolvars_a_SOURCES += colvarscript.cpp
libcolvars_a_SOURCES += colvarscript_commands.cpp
libcolvars_a_SOURCES += colvarscript_commands_bias.cpp
libcolvars_a_SOURCES += colvarscript_commands_colvar.cpp
libcolvars_a_SOURCES += colvartypes.cpp
libcolvars_a_SOURCES += colvarvalue.cpp
libcolvars_a_SOURCES += nr_jacobi.cpp
#
#
# End of Makefile.am
#
